--- a/exelenteRu/css/school-page.css
+++ b/exelenteRu/css/school-page.css
@@ -251,3 +251,13 @@
     text-align: left;
   }
 }
+@media (min-width: 577px) {
+  .site-path a {
+    color: #ffffff;
+  }
+}
+@media (min-width: 577px) {
+  .site-path__item:not(:first-child)::before {
+    color: #ffffff;
+  }
+}
