--- a/exelenteRu/css/css-blocks/popup-login.less
+++ b/exelenteRu/css/css-blocks/popup-login.less
@@ -2,8 +2,7 @@
     input[type="text"],
     input[type="submit"],
     input[type="tel"],
-    input[type="password"] 
-      {
+    input[type="password"] {
         -webkit-appearance: none;
         width: 100%;
         height: 100%;
@@ -12,7 +11,7 @@
         outline: none;
     }
     position: absolute;
-    display: none;
+    display: block;
     flex-flow: column nowrap;
     justify-content: start;
     z-index: 999;
@@ -67,27 +66,11 @@
                 display: block;
                 float: right;
             }
-        clear: both;
+            clear: both;
+            margin-top: 19px;
         }
         .login-content-form__mail-input {
-            margin-bottom: 22px;
             font-style: italic;
-        }
-        .login-content-form__mail-input--error,
-        .login-content-form__pass-input--error {
-            display: none;
-            font-family: Open Sans;
-            font-style: italic;
-            font-weight: normal;
-            margin-top: -14px;
-            margin-bottom: 35px;
-            letter-spacing: -0.7px;
-            font-size: 10px;
-            color: #C82E2E;
-            position: absolute;
-        }
-        .login-content-form__pass-input--error {
-            top: 222px;
         }
         .login-content-form__mail-input,
         .login-content-form__pass-input {
@@ -121,6 +104,10 @@
                 background-image: url(../../img/svg-content/fb_hover.svg);
                 background-size: contain;
             }
+        }
+        .form--error {
+            margin: 0;
+            margin-top: 2px;
         }
         .login-content-ulist {
             width: 100%;
@@ -202,12 +189,14 @@
         margin-top: 10px;
     }
 }
-
+.login.hidden {
+    display: none;
+}
 .userpage {
     position: fixed;
     top: 465px;
     right: 14.6%;
-    display: none;
+    display: block;
     width: 231px;
     height: 209px;
     background: #F2F2F2;
@@ -261,4 +250,7 @@
             }
         }
     }
+}
+.userpage.hidden {
+    display: none;
 }
