--- a/netology/js-diploma/css/styles.css
+++ b/netology/js-diploma/css/styles.css
@@ -670,3 +670,9 @@ body {
 .menu[data-state="selected"] > .menu__item[data-state="selected"], .menu__item[data-state="selected"] + .tool {
   display: inline-block;
 }
+
+
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~ added ~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+.menu {
+  width: max-content;
+}
